## Overall setup

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "LungUtils"
version = "1.0"
authors = [{ name = "Maxi Ludwig" }]
maintainers = [{ name = "Maxi Ludwig" }]
description = "A quick start Python skeleton with many amenities"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["Skeleton", "Documentation", "CICD", "Testing", "Pre-Commit"]
classifiers = ["Programming Language :: Python :: 3.12"]

requires-python = "==3.12.*"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["lung_utils"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
lung_utils = "lung_utils.main:main"

## Tools

[tool.bandit]
exclude_dirs = [
    ".git",
    "__pycache__",
]

[tool.black]
line-length = 79

[tool.coverage.run]
relative_files = true

[tool.isort]
profile = "black"
line_length = 79
filter_files = true
src_paths = ["src/lung_utils/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p pytest_cov --cov-report=term --cov-report=html --cov-fail-under=90 --cov=src/lung_utils/ --cov-append"
